# bevy-card-game

./: Cargo.toml  README.md
.cargo/: config.toml
src/: card.rs  card_panel.rs  main.rs  mouse_tracking.rs  scene_setup.rs
src/cards/: card.rs  card_panel.rs  card_plugin.rs  mod.rs
